# cecypo_pos_mpesa

./: .gitignore  README.md  license.txt  pyproject.toml
cecypo_pos_mpesa/: api.py  hooks.py  patches.txt
cecypo_pos_mpesa/fixtures/: custom_field.json
cecypo_pos_mpesa/patches/v1_0/: add_pos_invoice_to_mpesa_c2b.py
cecypo_pos_mpesa/public/js/: point_of_sale_mpesa.js  pos_invoice_mpesa_quick_pay.js
