[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "cecypo_pos_mpesa"
version = "1.0.0"
description = "POS Mpesa Quick Pay integration for ERPNext"
authors = [
    {name = "Cecypo.Tech", email = "support@cecypo.tech"}
]
license = {text = "AGPL-3.0"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Frappe",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "frappe",
]

[project.urls]
Homepage = "https://github.com/cecypo/cecypo_pos_mpesa"
Documentation = "https://github.com/cecypo/cecypo_pos_mpesa"

[tool.bench.dev-dependencies]

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
